crates/weft-snapshots/tests/snapshots/solid-tsx/example-checkbox.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-checkbox as solid-tsx
---
export type WeftEvent = { id: string; action: string; item?: string };

export type WeftProps = {
  data?: any;
  actions?: Record<string, (event: WeftEvent) => void>;
  onChange?: (path: string, value: unknown) => void;
};

function _on(v: unknown): boolean {
  return v === "false" ? false : Boolean(v);
}

function _act(actions: WeftProps["actions"], event: WeftEvent): void {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

export default function WeftScreen(props: WeftProps) {
  return (
    <main data-weft-id="root" aria-label="Terms">
      <label>
        <input data-weft-id="terms" type="checkbox" aria-label="I accept the terms" checked={_on(props.data?.acceptTerms)} onChange={(_e) => { props.onChange?.("$.acceptTerms", _e.currentTarget.checked); _act(props.actions, { id: "terms", action: "form.edit" }); }} />
        <span aria-hidden="true">I accept the terms</span>
      </label>
    </main>
  );
}
